# MICADO-pinion-test

./: README.md  driverdev.cpp  driverdev.cpp.orig  driverdev.cpp.rej  driverdev.h  driverdev.h.orig  driverdev.h.rej  fromworiking.txt  last_changes.txt  latest_changes.txt  led_driver.cpp  localchanges.txt  localchanges2.txt  localchanges_last.txt  logfile.cpp  logfile.h  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.cpp.rej  mainwindow.h  mainwindow.h.rej  mainwindow.ui  micado-bearingtest.pro  micado-bearingtest.pro.user.4216f2c  patch.txt  pythronmotordriver.cpp  pythronmotordriver.cpp.rej  pythronmotordriver.h  thorlabscamera.cpp  threadedtimer.cpp  threadedtimer.h
Documentation/: Readme
Documentation/Documentation controller/: Motor_controller_settings_pinion_test_v0.1.xlsx
libmovieoutput/: README.md
libmovieoutput/src/: movie_output.cpp  movie_output.hpp
linux/: analogdaq.cpp  analogdaq.cpp.rej  analogdaq.h
micado-bearingtest_Software/: build_mccusb.sh  driverdev.cpp  driverdev.cpp.orig  driverdev.cpp.rej  driverdev.h  driverdev.h.orig  driverdev.h.rej  fromworiking.txt  last_changes.txt  latest_changes.txt  led_driver.h  localchanges.txt  localchanges2.txt  localchanges_last.txt  logfile.cpp  logfile.h  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.cpp.rej  mainwindow.h  mainwindow.h.rej  mainwindow.ui  micado-bearingtest.pro  micado-bearingtest.pro.user.4216f2c  patch.txt  phytronlog.txt  pythronmotordriver.cpp  pythronmotordriver.cpp.rej  pythronmotordriver.h  thorlabscamera.h  threadedtimer.cpp.rej  threadedtimer.h.rej
micado-bearingtest_Software/libmovieoutput/: CMakeLists.txt
micado-bearingtest_Software/linux/: analogdaq.cpp  analogdaq.cpp.rej  analogdaq.h
micado-bearingtest_Software/old/: analogdaq.cpp  analogdaq.h
micado-bearingtest_Software/win11/: Analog.h  Board.h  (+4 more)
old/: analogdaq.cpp  analogdaq.h
win11/: Board.h  Counters.h  Digital.h  analogdaq.cpp
